--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <p> before you start laughing at this pathetic attempt stop and think</p>
 <p> could you have done any better </p>
-<p> okay okay I know you could have done better but still -> <a href="Tetris/v1.2b/Tetris.html">good luck</a></p>
+<p> okay okay I know you could have done better but still -> <a href="Tetris/v1.2b/tetris.html">good luck</a></p>
 </body>
 </html>
