--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <p> okay okay I know you could have done better but still -> <a href="Tetris/v1.2b/tetris.html">good luck</a></p>
 <p> you also might want some instructions.. or maybe not -> <a href="Tetris/v1.2b/readme.txt">take them</a></p>
 <p> alternative versions if you wanna see how it looked beforehand -> <a href="Tetris/v1.1/tetris.html">v1.1</a> and <a href="Tetris/v1.0/tetris.html">v1.0</a></p>
-<p> should be self-explanatory: <a href="Tetris/changelog.txt">changelog</a></p>
+<p> should be self-explanatory: <a href="Tetris/log.txt">changelog</a></p>
 </body>
 </html>
