--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <p> you also might want some instructions.. or maybe not -> <a href="Tetris/v1.2b/readme.txt">take them</a></p>
 <p> alternative versions if you wanna see how it looked beforehand -> <a href="Tetris/v1.1/tetris.html">v1.1</a> and <a href="Tetris/v1.0/tetris.html">v1.0</a></p>
 <p> should be self-explanatory: <a href="Tetris/log.txt">changelog</a></p>
+<p> one last thing or two or whatever (depending on how much more I add v) it appears that <small>v1.1 doesn't work</small></p>
 </body>
 </html>
