--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <title>(1) notifcation</title>
 </head>
 <body>
-<p> before you start laughing at this pathetic attempt stop and think</p>
-<p> could you have done any better </p>
-<p> okay okay I know you could have done better but still -> <a href="Tetris/v1.2b/tetris.html">good luck</a></p>
+<p> before you start laughing at this pathetic attempt stop and think to yourself:</p>
+<p> could you have done any better?</p>
+<p> okay okay I know you could have done better but still why not try this-> <a href="Tetris/v1.2b/tetris.html">good luck</a></p>
 <p> you also might want some instructions.. or maybe not -> <a href="Tetris/v1.2b/readme.txt">take them</a></p>
 <p> alternative versions if you wanna see how it looked beforehand -> <a href="Tetris/v1.1/tetris.html">v1.1</a> and <a href="Tetris/v1.0/tetris.html">v1.0</a></p>
 <p> should be self-explanatory: <a href="Tetris/log.txt">changelog</a></p>
 <p> one last thing or two or whatever (depending on how much more I add v) it appears that <font size="1">v1.1 doesn't work</font></p>
+<h4> Introduction </h4>
+<p> <a href='Ankyria/0.0.1b/Ankyria.html'>About me</a> </p>
 </body>
 </html>
