Added more introductions stuff

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 <title>(1) notifcation</title>
 </head>
 <body>
-<p> before you start laughing at this pathetic attempt stop and think to yourself:</p>
-<p> could you have done any better?</p>
-<p> okay okay I know you could have done better but still why not try this-> <a href="Tetris/v1.2b/tetris.html">good luck</a></p>
-<p> you also might want some instructions.. or maybe not -> <a href="Tetris/v1.2b/readme.txt">take them</a></p>
-<p> alternative versions if you wanna see how it looked beforehand -> <a href="Tetris/v1.1/tetris.html">v1.1</a> and <a href="Tetris/v1.0/tetris.html">v1.0</a></p>
-<p> should be self-explanatory: <a href="Tetris/log.txt">changelog</a></p>
-<p> one last thing or two or whatever (depending on how much more I add v) it appears that <font size="1">v1.1 doesn't work</font></p>
-<h4> Introduction </h4>
-<p> <a href='Ankyria/0.0.1b/Ankyria.html'>About me</a> </p>
+    <p> before you start laughing at this pathetic attempt stop and think to yourself:</p>
+    <p> could you have done any better?</p>
+    <p> okay okay I know you could have done better but still why not try this-> <a href="Tetris/v1.2b/tetris.html">good luck</a></p>
+    <p> you also might want some instructions.. or maybe not -> <a href="Tetris/v1.2b/readme.txt">take them</a></p>
+    <p> alternative versions if you wanna see how it looked beforehand -> <a href="Tetris/v1.1/tetris.html">v1.1</a> and <a href="Tetris/v1.0/tetris.html">v1.0</a></p>
+    <p> should be self-explanatory: <a href="Tetris/log.txt">changelog</a></p>
+    <p> one last thing or two or whatever (depending on how much more I add v) it appears that <font size="1">v1.1 doesn't work</font></p>
+  <h3> Preamble </h3>
+    <p> <a href='Ankyria/0.0.1b/Ankyria.html'>About me</a>: I like programming, reading, sport, chess, debating, bored games,</p>
+    <p> manipulating the english language, constructive and destructive criticism, xkcd, random letter strings, sarcasm and making stuff up </p>
+    <p> Pro tip: some of the above are actually true</p>
+  <h3> Introduction </h3>
+    <p> The problem is I've already said everything I wanted to say so I guess I'll just say that everything here is under development </p>
+    <p> If it looks terrible then complain to wen00@live.com.au and I'll get round to it within a year, 50% guaranteed </p>
 </body>
 </html>
