changed <p> to <br>

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <p> should be self-explanatory: <a href="Tetris/log.txt">changelog</a></p>
     <p> one last thing or two or whatever (depending on how much more I add v) it appears that <font size="1">v1.1 doesn't work</font></p>
   <h3> Preamble </h3>
-    <p> <a href='Ankyria/0.0.1b/Ankyria.html'>About me</a>: I like programming, reading, sport, chess, debating, bored games,</p>
-    <p> manipulating the english language, constructive and destructive criticism, xkcd, random letter strings, sarcasm and making stuff up </p>
+    <p> <a href='Ankyria/0.0.1b/Ankyria.html'>About me</a>: I like programming, reading, sport, chess, debating, bored games,<br>
+        manipulating the english language, constructive and destructive criticism, xkcd, random letter strings, sarcasm and making stuff up </p>
     <p> Pro tip: some of the above are actually true</p>
   <h3> Introduction </h3>
     <p> The problem is I've already said everything I wanted to say so I guess I'll just say that everything here is under development </p>
