--- a/Ankyria/0.0.1b/Ankyria.html
+++ b/Ankyria/0.0.1b/Ankyria.html
@@ -1,28 +1,9 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="!style.css">
-<link rel="shortcut icon" href="favicon.ico">
-<title>Ankyria</title>
+<title>404 errors</title>
 </head>
 <body>
-    <div id="gameContainer"></div>
-    <div id='license'><a href="../license.html">License</a></div>
-    <script type="text/javascript">
-        var l = new Object(); //local computer (i.e not online) variables
-    </script>
-    <script type="text/javascript" src="main.js"></script>
-    <script type="text/javascript" src="encrypter.js"></script>
-    <script type="text/javascript" src="shuttle.js"></script>
-    <script type="text/javascript" src="explore.js"></script>
-    <script type="text/javascript" src="jobs.js"></script>
-    <script type="text/javascript" src="calendar.js"></script>
-    <script type="text/javascript" src="options.js"></script>
-    <script type="text/javascript" src="aims.js"></script>
-    <script type="text/javascript" src="workshop.js"></script>
-    <script type="text/javascript" src="buildings.js"></script>
-    <script type="text/javascript">
-        l.start();
-    </script>
+    <div>Sorry the game was <a href="http://wen1now.github.io/Ankyria">moved</a> to here</div>
 </body>
 </html>
