--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>(1) notifcation</title>
+<link rel="stylesheet" type="text/css" href="a.css">
 </head>
 <body>
     <p> before you start laughing at this pathetic attempt stop and think to yourself:</p>
@@ -18,5 +19,30 @@
   <h3> Introduction </h3>
     <p> The problem is I've already said everything I wanted to say so I guess I'll just say that everything here is under development </p>
     <p> If it looks terrible then complain to wen00@live.com.au and I'll get round to it within a year, 50% guaranteed </p>
+  <h3> After a long anticipated wait... [for the full story see below] </h3>
+        After a long anticipated wait the second version of jailbreak is now available! Having spent the past few days in program-land,<br>
+        this newest version is painfully contrasted against the old version which, although having a retro theme, was in many ways this<br>
+        version's superior. We cut now to our leading reporter in the field, bbq:<br>
+        <pre>where is the <a href="../jailbreak/index.html">new version</a>?</pre> (hyperlink added by editor)<br>
+        Thank you bbq. Now we'll switch to the game developer:<br>
+        <b>reporter:</b>  <pre> Why did you make such a game?</pre><br>
+        <b>developer:</b>  <pre>Oh, you know, I was feeling kind of bored one day and since my coding skills were kinda rusty and-</pre><br>
+        <b>reporter:</b>  <pre> Are you planning on doing more 'projects' like this?</pre><br>
+        <b>developer:</b>  <pre>What, no. Like I said, it's because my coding skills are a bit worse for wear so -</pre><br>
+        <b>reporter:</b>  <pre> When is the next project being released?</pre><br>
+        <b>developer:</b>  <pre>I -</pre><br>
+        <b>reporter:</b>  <pre> Are you putting lots of effort into that one?</pre><br>
+        <b>developer:</b>  <pre>no -</pre><br>
+        <b>reporter:</b>  <pre> There you have it folks, an energetic developer dedicated to programming.</pre><br>
+        <p>Thank you developer. Does anybody else have anything else to say? Sorry, buddy, your hand was too late. There you have it! The<br>
+           story of a brave soul battling against the struggles of boredom.</p>
+        <p>Also if you actually wanted the game it's up there where it says 'new version'. Sorry I cbs adding another link :(</p>
+  <h3> Section 1.0.0.0.0.2: The woes of making your title too long </h3>
+        <p> Unfortunately the naming scheme of the different versions in one of my games is a little messed up and is usually too long<br>
+            I refuse to say which.</p>
+  <h3> Section 1.0.0.0... you know what, forget it</h3>
+
+<br><br><br><br><br><br><br><br><br>
+    
 </body>
 </html>
