I hope this works?

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         After a long anticipated wait the second version of jailbreak is now available! Having spent the past few days in program-land,<br>
         this newest version is painfully contrasted against the old version which, although having a retro theme, was in many ways this<br>
         version's superior. We cut now to our leading reporter in the field, bbq:<br>
-        <pre>where is the <a href="../jailbreak/index.html">new version</a>?</pre> (hyperlink added by editor)<br>
+        <pre>where is the <a href="../jailbreak/">new version</a>?</pre> (hyperlink added by editor)<br>
         Thank you bbq. Now we'll switch to the game developer:<br>
         <b>reporter:</b>  <pre> Why did you make such a game?</pre><br>
         <b>developer:</b>  <pre>Oh, you know, I was feeling kind of bored one day and since my coding skills were kinda rusty and-</pre><br>
