--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <p> Unfortunately the naming scheme of the different versions in one of my games is a little messed up and is usually too long<br>
             I refuse to say which.</p>
   <h3> Section 1.0.0.0... you know what, forget it</h3>
+  <h3> Section 1.1 </h3>
+<p><a href=".../window_thing/">ipt thing</a></p>
 
 <br><br><br><br><br><br><br><br><br>
     
