--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             I refuse to say which.</p>
   <h3> Section 1.0.0.0... you know what, forget it</h3>
   <h3> Section 1.1 </h3>
-<p><a href=".../window_thing/">ipt thing</a></p>
+<p><a href="../window_thing/">ipt thing</a></p>
 
 <br><br><br><br><br><br><br><br><br>
     
