--- a/bell-wen/index.html
+++ b/bell-wen/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
-<title>Tetris v1.2b</title>
+<title>Loading--</title>
 </head>
 <body>
     <div><span>Time left until the bell, approximately</span><pre id="timeleftbox"></pre></div>
