made stuff better

--- a/bell-wen/index.html
+++ b/bell-wen/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <div><span>Time left until the bell, approximately</span><pre id="timeleftbox"></pre></div>
-    <div><sub>Tool developed by Wen -- use at your own peril</sub></div>
-    <script type="text/javascript" src="main.js"></script>
+    <div>"Advanced" options:</div>
+    <input min="-60" max="60" value="0" type="range" id="slider"><span id="slidertext"></span>
+    <script type="text/javascript" src="main.js"></script><div>
+    <sub>Tool developed by Wen -- use at your own peril</sub></div>
+    
 </body>
 </html>
