added day chooser

--- a/bell-wen/index.html
+++ b/bell-wen/index.html
@@ -8,6 +8,16 @@
     <div><span>Time left until the bell, approximately</span><pre id="timeleftbox"></pre></div>
     <div>"Advanced" options:</div>
     <input min="-60" max="60" value="0" type="range" id="slider"><span id="slidertext"></span>
+    <form>
+	    <input name="times" value="mf" id="mf" type="radio">
+	    Monday/Friday<br>
+	    <input name="times" value="tw" id="tw" type="radio">
+	    Tuesday/Wednesday<br>
+	    <input name="times" value="th" id="th" type="radio">
+	    Thursday<br>
+	    <input name="times" value="ss" id="ss" type="radio">
+	    No bells today<br>
+	</form>
     <script type="text/javascript" src="main.js"></script><div>
     <sub>Tool developed by Wen -- use at your own peril</sub></div>
     
