--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
   <h3> Section 1.0.0.0... you know what, forget it</h3>
   <h3> Section 1.1 </h3>
 <p><a href="../window_thing/">ipt thing</a></p>
+  <h3> Section 1.2: Mathematics and Algorithmic Thinking High School competition </h3>
+<p>Here's the <a href="MATHS comp">link</a> to the website; basically this is an open entry competition to see if <s>anybody reads this stuff</s> anybody is good at maths</p>
+
 
 <br><br><br><br><br><br><br><br><br>
     
