--- a/MATHS comp/index.html
+++ b/MATHS comp/index.html
@@ -34,7 +34,7 @@
     </p>
     <ol>
     	<li>The coordinates of a triangle are (-5,18), (-4,11) and (0,3). Find the coordinates of the circumcenter and answer with x and y coordinates concatenated (e.g if your coordinates are (123,45) then your answer would be 12345). <span class="answer">2018</span></li>
-    	<li>How many positive integers \(N\) between 1 and 1000000 inclusive have the property that \(k!\) (k factorial) never has exactly \(k\) digits in base \(N\)?<br>For instance, if N=3 then when k=5, 5!=11110<sub>3</sub> has 5 digits in base 3 and thus N=3 is discounted from the total tally. <span class="answer">0</span></li>
+    	<li>How many positive integers \(N\) between 2 and 1000000 inclusive have the property that \(k!\) (k factorial) for \(k>1\) never has exactly \(k\) digits in base \(N\)?<br>For instance, if N=3 then when k=5, 5!=11110<sub>3</sub> has 5 digits in base 3 and thus N=3 is discounted from the total tally. <span class="answer">0</span></li>
     	<li>Suppose that A(n) represents the point \( (n,n^2) \). Consider the convex pentagon with vertices \[A(2016^{2016}),A(2017^{2017}),A(2018^{2018}),A(2019^{2019}),A(2020^{2020})\] Count the number of lattice points inside or on the boundary of this pentagon. What are the first five digits of the answer? <span class="answer">24470</span></li>
 	</ol>
 	<br><br><br><br><br><br><br><br><br>
