--- a/MATHS comp/index.html
+++ b/MATHS comp/index.html
@@ -14,8 +14,8 @@
 </script>
 -->
 
-<script type="text/javascript"
-    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?...">
 </script>
 </head>
 <body>
@@ -29,6 +29,10 @@
     <p>
     	No registration or anything is required; if you want to join wait until the competition starts and email in an answer to <b>wen00@live.com.au</b>. The period for accepting emails will last 24hrs although the questions will stay up indefinitely. You may use any resources available (in fact research is highly recommended) except for expicitly asking the question on any online forum. No proofs are required in your answer. Competitions will be held fortnightly; the maximum points per round will be 100 split between any number of questions<br>
     	<b>The next competition will begin 10:00am Saturday 8th September AEST</b>
+    <h3>Competitions</h3>
+    <p>
+One last note -- questions generally have some preamble; if you're familiar with mathematical terminology then it's unnecessary to read the preamble to each question -- just read the text after the [ point count ]</p><br>
+    	<a href="Rounds/round1.html">Round 1</a> Ends: [09/09/2018 10:00am]
     <h3>Style of question</h3>
     	Here are some example questions of the style of question that'll be asked (highlight black for the answer):
     </p>
