clarified triangle question

--- a/MATHS comp/Rounds/round1.html
+++ b/MATHS comp/Rounds/round1.html
@@ -15,7 +15,7 @@
 	<li>
 	<span class="points">[  5 points ]</span> What are the last five digits of the smallest number with exactly 2018 factors (a factor is a positive integer divisor of a number)?</li><br>
 	<li>
-	<span class="points">[  5 points ]</span> How many triangles are there on a 4 by 4 lattice grid of dots, with each dot being a vertex? Two such triangles are shown below:<br><img src="images/r1q2.png" alt="example 4x4 things"></li><br>
+	<span class="points">[  5 points ]</span> How many triangles (translations, rotations and reflections are considered <b>different</b>) are there on a 4 by 4 lattice grid of dots, with each dot being a vertex? Two such triangles are shown below:<br><img src="images/r1q2.png" alt="example 4x4 things"></li><br>
 	<li>
 	The Fibonacci numbers are defined by
 	\[F_1 = 1,F_2=1,F_{n+2}=F_{n+1}+F_n\]
