--- a/gravity blocks/index.html
+++ b/gravity blocks/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="generic.css">
 <link rel="shortcut icon" href="favicon.ico">
-<title>Jailbreak</title>
+<title>Gravity blocks</title>
 </head>
 <body>
     <div id="maintitle">Gravity blocks</div><div><a href="instructions.html">Instructions</a></div>
