--- a/gravity blocks/index.html
+++ b/gravity blocks/index.html
@@ -6,7 +6,7 @@
 <title>Gravity blocks</title>
 </head>
 <body>
-    <div id="maintitle">Gravity blocks</div><div><a href="instructions.html">Instructions</a></div>
+    <div id="maintitle">Gravity blocks</div>
     <div id="returntomenu" onclick="drawMenu()"><<- Menu</div>
     <div id="status"><div id="information"></div><span id="sizeincrease" class="size" onclick="sizeincrease()">[+]</span><span class="size" id="sizedecrease" onclick="sizedecrease()">[-]</span></div>
     <div id="tooltip"></div>
