--- a/speedmaths/index.html
+++ b/speedmaths/index.html
@@ -32,7 +32,7 @@ MathJax.Hub.Config({
     <h4>Choose a test:</h4>
     <select id="select" onchange="updatequizinfo()"></select>
     <button onclick="startquiz()" id='startquiz'>Go -></button>
-    <button onclick="endquiz(true)" id='endquiz' disabled=true>End quiz</button>
+    <button onclick="endquiz(true)" id='endquiz' disabled=true>End quiz</button><br><br>
     <b><div id="quizinfo"></div></b>
     <div id="quizbonusinfo"></div>
     <div id="time"></div>
